package rgomesro.Taxes;

public class Tax {
}
