@startuml


  namespace rgomesro {
    class rgomesro.Main {
    }
  }


  namespace rgomesro {
    namespace models {
      class rgomesro.models.Connections {
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      class rgomesro.models.World {
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      class rgomesro.models.WorldMarket {
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace allowances {
        class rgomesro.models.allowances.Allowance {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace entities {
        class rgomesro.models.entities.Agent {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace entities {
        abstract class rgomesro.models.entities.Entity {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace entities {
        class rgomesro.models.entities.Market {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace entities {
        class rgomesro.models.entities.Product {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace entities {
        class rgomesro.models.entities.State {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace taxes {
        class rgomesro.models.taxes.Levy {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace taxes {
        class rgomesro.models.taxes.Tariff {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace taxes {
        abstract class rgomesro.models.taxes.Tax {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace taxes {
        class rgomesro.models.taxes.VAT {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace models {
      namespace taxes {
        class rgomesro.models.taxes.WealthTax {
        }
      }
    }
  }
  

  namespace rgomesro {
    namespace utils {
      class rgomesro.utils.FileUtils {
      }
    }
  }
  

  namespace rgomesro {
    namespace utils {
      class rgomesro.utils.JsonUtils {
      }
    }
  }
  

  namespace rgomesro {
    namespace utils {
      class rgomesro.utils.MathUtils {
      }
    }
  }
  

  namespace rgomesro {
    namespace utils {
      class rgomesro.utils.RandomUtils {
      }
    }
  }
  

  namespace rgomesro {
    namespace utils {
      class rgomesro.utils.TransactionUtils {
      }
    }
  }
  

  rgomesro.models.World o-- rgomesro.models.WorldMarket
  rgomesro.models.WorldMarket o-- rgomesro.models.World
  rgomesro.models.allowances.Allowance o-- rgomesro.models.entities.State
  rgomesro.models.allowances.Allowance o-- rgomesro.models.allowances.Allowance.Type
  rgomesro.models.entities.Agent -up-|> rgomesro.models.entities.Entity
  rgomesro.models.entities.Agent o-- rgomesro.models.entities.Product
  rgomesro.models.entities.Agent o-- rgomesro.models.entities.State
  rgomesro.models.entities.Agent o-- rgomesro.models.WorldMarket
  rgomesro.models.entities.Market -up-|> rgomesro.models.entities.Entity
  rgomesro.models.entities.Market o-- rgomesro.models.entities.State
  rgomesro.models.entities.Product -up-|> rgomesro.models.entities.Entity
  rgomesro.models.entities.Product o-- rgomesro.models.entities.Agent
  rgomesro.models.entities.State -up-|> rgomesro.models.entities.Entity
  rgomesro.models.entities.State o-- rgomesro.models.allowances.Allowance
  rgomesro.models.entities.State o-- rgomesro.models.taxes.Levy
  rgomesro.models.entities.State o-- rgomesro.models.entities.Market
  rgomesro.models.entities.State o-- rgomesro.models.taxes.Tariff
  rgomesro.models.entities.State o-- rgomesro.models.taxes.VAT
  rgomesro.models.entities.State o-- rgomesro.models.taxes.WealthTax
  rgomesro.models.taxes.Levy -up-|> rgomesro.models.taxes.Tax
  rgomesro.models.taxes.Levy o-- rgomesro.models.entities.State
  rgomesro.models.taxes.Tariff -up-|> rgomesro.models.taxes.Tax
  rgomesro.models.taxes.VAT -up-|> rgomesro.models.taxes.Tax
  rgomesro.models.taxes.WealthTax -up-|> rgomesro.models.taxes.Tax
  rgomesro.models.taxes.WealthTax o-- rgomesro.models.entities.State



@enduml
